# broverse

./: .gitignore  README.md  dev.ipynb  example_prompt.py  flow.md  flow_diagram  flowchart  flowtoflow.md  main.py  offline_index.md  offline_index.py  online_index.md  online_index.py  pyproject.toml  shared.json  test.py  test_broflow.ipynb  test_sagemaker.ipynb  test_simple_flow.md  test_simple_flow.py
.amazonq/rules/: system_prompt.md
broverse/: __init__.py  action.py  action_async.py  bedrock.py  flow.py  flow_async.py  interface.py  prompt.py  prompt_action.py  tools.py  utils.py
broverse/program/: __init__.py  chunking.py  embedding.py  registering.py  router.py
documents/: dynamodb.md
examples/: global_state_example.py
examples/rag_systems/: offline_index.md  offline_index.py  online_index.md  online_index.py
examples/rag_systems/flows/: offlineflow.py  onlineflow.py
examples/rag_systems/flows/both/: dynamodb.py  embedding.py  s3vector.py
examples/rag_systems/flows/offline/: chunking.py  html_parsing.py  registering.py  saving_vector_store.py  (+2 more)
examples/rag_systems/program/: chat.py  chunking.py  embedding.py  farewell.py  html_parsing.py  registering.py  router.py  s3vector.py  saving_vector_store.py  updating_status.py  uploading.py  user_input.py
examples/rag_systems/prompts/: chat.yml  farewell.yml  router.yml
examples/react/: actions.py
examples/tool_calling/: actions.py  flow.md  flow.py  main.py  shared.json  system_commands.py  tools.py
examples/tool_calling/prompts/: memo.md  system_prompts.py  tool_call.yaml  tool_selector.yaml
(+5 files in other folders)
