[project]
name = "broverse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "broflow==0.1.2",
    "brollm==0.1.2",
    "broprompt==0.1.4",
    "sentence-transformers>=5.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
]
